# dosview

./: .gitmodules  README.md  dosview.desktop  dosview.py  pyproject.toml  requirements.txt  setup.py  test.ipynb
.github/: copilot-instructions.md
.github/workflows/: PyInstaller.yml  python-publish.yml  tests.yml
data/: DATALOG_AIRDOS04_2.0.TXT  DATALOG_AIRDOS_GEO.TXT
dosview/: __init__.py  airdos04.py  calibration_widget.py  coincidence_widget.py  eeprom_schema.py  eeprom_widget.py  live_view.py  parsers.py  rtc_widget.py  version.py
tests/: test_calibration_csv_metadata.py  test_parser.py
tools/: gen_eeprom_header.py
